--- a/.github/workflows/prod_projetobloom.yml
+++ b/.github/workflows/prod_projetobloom.yml
@@ -33,6 +33,9 @@ jobs:
         run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Cleaning testing files
+        run: |
+          rm .env
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
